se anadieron los ultimos cambios de aqui se construye

--- a/aquiseconstruye/templates/base.html
+++ b/aquiseconstruye/templates/base.html
@@ -124,8 +124,8 @@ a:hover .afot {
             <li><a href="{%url 'logout'%}">Salir</a></li>
             {%else%}
       
-              <li><a href="{%url 'login'%}">login</a></li>
-              <li><a href="{%url 'register'%}">register</a></li>
+              <li><a href="{%url 'login'%}">Entar</a></li>
+              <li><a href="{%url 'register'%}">Registrarte</a></li>
           
             {%endif%}
           </ul>
@@ -171,9 +171,6 @@ a:hover .afot {
                               
                                <a href="" style="text-decoration: none;" class="afot">Acerca de nosotros</a> 
                            
-                        
-                          
-                            <a href="" class="afot"> Contacto</a> 
                            
                         </div>
           
