se ajustaron los campos

--- a/aquiseconstruye/work/templates/card_obra.html
+++ b/aquiseconstruye/work/templates/card_obra.html
@@ -91,6 +91,10 @@
                         <h3>{{obras.name}}</h3><br>
                         <p>{{obras.address}}</p>
                         <br>
+                        <p>Número de obra {{obras.no_work}}</p>
+                        <br>
+                        <p>Número de contrato {{obras.no_contract}}</p>
+                        <br>
                     </div>
                     <div class="extra">
                     <p><strong>Precio</strong> ${{obras.price}}.0</p>
