--- a/aquiseconstruye/templates/base.html
+++ b/aquiseconstruye/templates/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% block stylesheets %}
+{% endblock %}
 <style>
 .container {
   max-width: 1050px;
@@ -20,6 +22,7 @@ body {
     background-size:     cover;                      /* <------ */
     background-repeat:   no-repeat;
     background-position: center center;
+    font-family: 'Roboto Condensed';
 }
 
 a:hover {
@@ -74,8 +77,10 @@ a:hover .afot {
   width:20% ;
  }
 
+ 
+
 </style>    
-    
+
     <head>
         <meta charset='UTF-8'>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -114,6 +119,7 @@ a:hover .afot {
               <img src="{% static "LogoWeb.png" %}" style="width: 200px; height: 100px; " alt='aqui se construye'>
           </div>
         </a></li>
+        <li><a href="{%url 'investigacion'%}">Investigación</a></li>
           {%if request.user.is_authenticated%}
             <li><a href="{%url 'profile'%}">Perfil</a></li>
             <li><a href="{%url 'profile_form'%}">Editar Perfil</a></li>
@@ -169,7 +175,7 @@ a:hover .afot {
                         <div class="col-md-6">
                           
                               
-                               <a href="" style="text-decoration: none;" class="afot">Acerca de nosotros</a> 
+                               <a href="{%url 'nosotros'%}" style="text-decoration: none;" class="afot">Acerca de nosotros</a> 
                            
                            
                         </div>
