--- a/aquiseconstruye/work/templates/obra.html
+++ b/aquiseconstruye/work/templates/obra.html
@@ -130,7 +130,7 @@
                 <h3>Plazo para complentar la obra</h3>
                 <h4>{{obra.term|date:"d-m-Y"}}</h4></div>
                 {%else%}
-                <h4>No hay paso para terminar la obra</h4>
+                <h4>No hay plazo para terminar la obra</h4>
                 {%endif%}
 
             <div class="col"></div>
