--- a/aquiseconstruye/work/templates/obras.html
+++ b/aquiseconstruye/work/templates/obras.html
@@ -12,12 +12,32 @@
     <meta charset="utf-8">
 {%endblock%}
 
+<style>
+  .barra{
+    margin-left:60%; 
+    font-family: 'Montserrat';
+  }
+  .sem{
+    color: black;
+  }
+  @media (max-width: 425px){
+    .barra{
+    margin-left:0%; 
+    font-family: 'Montserrat';
+    
+  }
+  .sem{
+    color: white;
+  }
+    }
+</style>
+
 {%block content%}
 <form method="get">
     
   <div class="row" style="margin-top:3%;">
-    <div class="form-group col-sm-4 col-md-2" style="margin-left:60%; font-family: 'Montserrat';">
-      {{ filter.form.traffic_light.label_tag }}
+    <div class="form-group col-sm-4 col-md-2 barra" >
+      <div clas="sem">{{ filter.form.traffic_light.label_tag }}</div>
       {% render_field filter.form.traffic_light class="form-control" %}
     </div>
     <div class="form-group col-sm-4 col-md-3" style="margin-top:30px; margin-left:60%;">
@@ -28,8 +48,28 @@
   
 </form>
 <br>
-{% for obras in filter.qs %}
-    {% include 'card_obra.html' %}
-{%endfor%}
+
+<div style="padding-top:20px;padding-bottom:20px;">
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-sm-10 text-center offset-sm-1">
+          <br>
+          <div class="col-12 d-flex flex-wrap align-items-stretch justify-content-center">
+            {% for obras in filter.qs %}
+                  <div class="col-md-3 d-flex align-items-stretch">
+                    {% include 'card_obra.html' %}
+                  </div>
+              {%endfor%}
+          </div>
+          <br>
+          
+       
+          <br>
+      </div>
+  </div>
+</div>
+</div>
+
+
 
 {%endblock%}
