--- a/aquiseconstruye/users/templates/profile.html
+++ b/aquiseconstruye/users/templates/profile.html
@@ -33,7 +33,7 @@
 		
 	<div>
 		<div class="container " style="background-color: black; border-radius:20px;">
-			<h5 class="title">Followers</h5>
+			<h5 class="title">Obras que sigo</h5>
 		</div>
 		
 		<div class="col-12 d-flex flex-wrap align-items-stretch justify-content-center">
