--- a/aquiseconstruye/work/templates/card_obra.html
+++ b/aquiseconstruye/work/templates/card_obra.html
@@ -8,7 +8,8 @@
   border-radius: 4px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
   cursor: pointer;
-  margin-left: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
   margin-top: 5%;
   font-family: "Rubik", sans-serif;
   
@@ -109,7 +110,7 @@
       
       <div style="height:200px; padding:0px 10px;" class="text-center ">
           <br>
-          <h3>{{obras.alias|truncatechars:20 }}</h3>
+          <h3>{{obras.alias|truncatechars:50 }}</h3>
           <p>{{obras.address}}</p>
           <p>Número de obra {{obras.no_work}}</p>
           <p>Número de contrato {{obras.no_contract}}</p>
