--- a/aquiseconstruye/work/templates/obra.html
+++ b/aquiseconstruye/work/templates/obra.html
@@ -170,8 +170,7 @@
                 
             </div>
                 <br>
-                <br>
-                <br>
+                
         <div class="row text-center">
     
             
@@ -227,7 +226,10 @@
                                 <h6>No se a terminado</h6>
                             {%endif%}
                         </div>
-                        
+                       
+                       
+                        <div class="recuadros">
+                        </div>
                 
             </div>
         </div>
@@ -248,19 +250,19 @@
         <div class="recuadros">
         </div>
         <h2>Costo total de la obra</h2>
-            <div class="col"></div>
-            <div class="col">
-                <img src='https://i.ibb.co/zsTPVdL/monedas.png' alt="logo" width=120 height=100 >
+            
+            <div class="col-6">
+                <img src='{% static 'icon/monedas.png' %}' alt="logo" width=120 height=100 >
             </div>
-            <div class="col">
+            <div class="col-6" style="text-align:initial">
                 {% if obra.price %}
-                    <h3>Precio: {{ obra.price|intcomma }}</h3>
+                    <h3>{{ obra.price|intcomma }}</h3>
                 {% else %}
-                    <h3>Precio: Sin información</h3>
+                    <h3>Sin información</h3>
                 {% endif %}
 
             </div>
-            <div class="col"></div>
+           
         <div  class="recuadros">
         </div>
     </div>
@@ -272,11 +274,11 @@
     <div class="row text-center">
         <div class="recuadros">
         </div>
-        <div class="col"></div>
-        <div class="col">
+        
+        <div class="col-6">
             <img src="https://i.ibb.co/fQNtDH5/poli.png" alt="logo" width=120 height=100 >
         </div>
-        <div class="col">
+        <div class="col-6" style="text-align:initial">
             <h3>Funcionario (s)</h3>
             {% if obra.official%}
                 <h5>{{obra.official}}</h5>
@@ -286,8 +288,13 @@
             {% if obra.dependence%}
                 <h5>{{obra.dependence}}</h5>
             {%endif%}
+            <br>
+            <h3>Orden de gobierno</h3>
+            {% if obra.order_gob%}
+                <h5>{{obra.order_gob}}</h5>
+            {%endif%}
         </div>
-        <div class="col"></div>
+       
         <div  class="recuadros">
         </div>
     </div>
@@ -299,11 +306,11 @@
     <div class="row text-center">
         <div  class="recuadros">
         </div>
-        <div class="col"></div>
-        <div class="col">
+       
+        <div class="col-6">
             <img src="https://i.ibb.co/7GMTzDR/construction-crane-hand-drawn-tool.png" alt="logo" width=120 height=100 >
         </div>
-        <div class="col">
+        <div class="col-6" style="text-align:initial">
             <h3>Constructora (s)</h3>
             {% if obra.constructor%}
                 <h5>{{obra.constructor}}</h5>
@@ -320,8 +327,19 @@
             {% if obra.constructor4%}
                 <h5>{{obra.constructor4}}</h5>
             {%endif%}
+            <br>
+            <h3>Empresario</h3>
+            {% if obra.entrepreneur%}
+                <h5>{{obra.entrepreneur}}</h5>
+            {%endif%}
+            <br>
+            <h3>Representante legal</h3>
+            {% if obra.legal_representative%}
+                <h5>{{obra.legal_representative}}</h5>
+            {%endif%}
+           
         </div>
-        <div class="col"></div>
+        
         <div class="recuadros">
         </div>
     </div>
@@ -334,11 +352,11 @@
   <div class="row text-center" >
     <div  class="recuadros">
     </div>
-    <div class="col"></div>
-    <div class="col">
+    
+    <div class="col-6">
         <img src="https://i.ibb.co/ByTj5HQ/business-partnership.png" alt="logo" width=120 height=100 >
     </div>
-    <div class="col">
+    <div class="col-6" style="text-align:initial">
         <h3>Contratos</h3>
         {% if obra.contracts %}
         <a style="background-color: #e1ad02; color:#000000; text-align: center;
@@ -362,7 +380,7 @@
        
         
     </div>
-    <div class="col"></div>
+    
 </div>
 <br>
 <br>
@@ -435,7 +453,7 @@
   <br>
 
 
-  {% if obra.newsletter.url%}
+  {% if obra.newsletter%}
   <object data="{{ obra.newsletter.url }}" type="application/pdf" width="80%" height="90%">
     <p>Este navegador no soporta la visualización de archivos PDF. Puedes descargar el archivo haciendo click <a href="{{ obra.newsletter.url }}">aquí</a>.</p>
   </object>
@@ -461,7 +479,7 @@
     z-index: 1;
     font-size: 40px;
     font-family: 'Covered By Your Grace', cursive; border-radius: 5px;">
-    Crear Encuesta</a>
+    Responder Encuesta</a>
 <br>
 <br>
 <br>
