--- a/aquiseconstruye/work/templates/obras.html
+++ b/aquiseconstruye/work/templates/obras.html
@@ -53,7 +53,7 @@
 {%endblock stylesheets%}
 {%block content%}
 <div>
-  <form method="get" class="text-center">
+  <form method="get" class="text-center" style="margin-top:3%">
     <div class="container" style=" background-color: black; border-radius:20px;">
       <h2 class="title">Todas las Obras</h2>
     <div class="row text-center" >
