--- a/aquiseconstruye/templates/base.html
+++ b/aquiseconstruye/templates/base.html
@@ -83,6 +83,9 @@ a:hover .afot {
 </style>    
 
     <head>
+      <link rel="icon" type="image/x-icon"  href="https://i.ibb.co/X8Jq4g6/icon.png" />
+        <link rel="icon" sizes="16x16" href="https://i.ibb.co/X8Jq4g6/icon.png" />
+        <link rel="icon" sizes="32x32" href="https://i.ibb.co/X8Jq4g6/icon.png" />
         <meta charset='UTF-8'>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -116,7 +119,7 @@ a:hover .afot {
               <img src="{% static "LogoWeb.png" %}" style="width: 200px; height: 100px; " alt='aqui se construye'>
           </div>
         </a></li>
-        <li><a href="{%url 'investigacion'%}">Investigación</a></li>
+        <li><a href="{%url 'investigaciones'%}">Investigaciones</a></li>
           {%if request.user.is_authenticated%}
             <li><a href="{%url 'profile'%}">Perfil</a></li>
             <li><a href="{%url 'profile_form'%}">Editar Perfil</a></li>
@@ -239,5 +242,43 @@ $(document).ready(function(){
 	}
 });
     </script>
+    <script type="text/javascript">
+      function debounce(func, wait = 20, immediate = true) {
+      var timeout;
+      return function() {
+        var context = this,
+          args = arguments;
+        var later = function() {
+          timeout = null;
+          if (!immediate) func.apply(context, args);
+        };
+        var callNow = immediate && !timeout;
+        clearTimeout(timeout);
+        timeout = setTimeout(later, wait);
+        if (callNow) func.apply(context, args);
+      };
+    }
     
+    const sliderImages = document.querySelectorAll('.slide-in');
+    
+    function checkSlide(e) {
+      sliderImages.forEach(sliderImage => {
+        // halfway through the image
+        const slideInAt = (window.scrollY + window.innerHeight) - sliderImage.height / 2;
+        // bottom of the image
+        const imageBottom = sliderImage.offsetTop + sliderImage.height;
+        const isHalfShown = slideInAt > sliderImage.offsetTop;
+        const isNotScrolledPast = window.scrollY < imageBottom;
+        if (isHalfShown && isNotScrolledPast) {
+          sliderImage.classList.add('active');
+        } else {
+          sliderImage.classList.remove('active');
+        }
+    
+        console.log(slideInAt);
+      });
+    }
+    
+    window.addEventListener('scroll', debounce(checkSlide));
+    </script>
     </body>
