--- a/aquiseconstruye/users/templates/registers.html
+++ b/aquiseconstruye/users/templates/registers.html
@@ -7,9 +7,9 @@
 <form class="form" method="post">
 	{% csrf_token %}
 	<div class="container">
-			<div class="row">
-					<div class="form-group text-center">
-							<div class="form-control" style="background-color:#fff0; border:0 solid #fff0; font-family:Covered By Your Grace; font-size:2rem; margin-top: 10%;">
+			<div class="row" >
+					<div class="form-group text-center" >
+							<div class="form-control" style="background-color:rgb(255, 255, 255); border:0 solid #fff0; font-family:Covered By Your Grace; font-size:2rem; margin-top: 10%;">
 										<div class="form-group">
 											<label>Email </label>
 											<input type="email" class="form-control"  placeholder="email" name='email' value='{{email}}' data-bind="value: email, css: valid, valueUpdate: 'keyup'" required>
